<resources>
    <string name="app_name">CoffeeSecret</string>
    <string name="version_code">1.0.0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_device_child_activity">某曲线</string>
    <string name="exit_app">再按一次退出</string>

    <!-- ReportInfoPagePart-->
    <string name="bean_name">豆名</string>
    <string name="country">国家</string>
    <string name="produce_area">产区</string>
    <string name="manor">庄园</string>
    <string name="altitude">海拔</string>
    <string name="bean_species">豆种</string>
    <string name="level">等级</string>
    <string name="water_content">含水量</string>
    <string name="handler">处理方式</string>
    <string name="supplier">供应商</string>
    <string name="price">价格</string>
    <string name="weight">库存量</string>
    <string name="buy_date">购买日期</string>

    <string name="beanDate">豆种日期:%1$#12s</string>
    <string name="author">烘焙师:%1$#12s</string>
    <string name="device">设备:%1$#12s</string>
    <string name="bakeDate">烘焙日期:%1$#12s</string>
    <string name="cookedWeight">熟豆重量:%1$#12s</string>
    <string name="rawWeight">生豆重量:%1$#12s</string>
    <string name="devTime">发展时间:</string>
    <string name="endTemp">结束温度:</string>
    <string name="devRate">发展率:</string>
    <string name="startTemp">入豆温度:</string>
    <string name="envTime">环境温度:%1$#12s</string>
    <string name="treatment">处理:%1$#12s</string>
    <string name="details">详情</string>
    <string name="eventTime">时间:</string>
    <string name="eventDetail">事件:</string>
    <string name="eventRemark">备注:</string>

    <string name="weight_number">30kg</string>
    <!-- ArcProgress -->
    <string name="label_beanProgress">豆温</string>
    <string name="label_inWindProgress">进风温</string>
    <string name="label_outWindProgress">出风温</string>
    <string name="suffix_arcProgress">℃</string>
    <integer name="begin_arcProgress">120</integer>
    <integer name="sweep_arcProgress">300</integer>
    <integer name="finished_begin_arcProgress">120</integer>
    <integer name="maxValue_arcProgress">350</integer>
    <!-- containerHome-->
    <string name="sort_by_area">产地排序</string>
    <string name="screen">筛选</string>
    <string name="add_bean">添加豆种</string>
    <string name="edit_bean">编辑豆种</string>
    <string name="cancel">取消</string>

    <string name="conta_title">我的货柜</string>
    <string name="new_cupping_title">添加杯测</string>
    <!-- 温度图表详情数据-->
    <string name="reportTime">时间</string>
    <string name="reportEnvTime">环境温度</string>
    <string name="reportBeanTemp">豆温</string>
    <string name="reportInwindTemp">进风温</string>
    <string name="reportOutwindtemp">出风温</string>
    <string name="reportUpTemp">豆子升温</string>
    <string name="curve">烘焙曲线</string>
    <string name="save">保存</string>

    <string name="progress_text_format_pattern">%d</string>
    <string name="edit">编辑</string>
    <string name="edit_cupping">点击修改</string>
    <string name="dry_and_frag">干湿香</string>
    <string name="flavor">风味</string>
    <string name="after_taste">余韵</string>
    <string name="acidity">酸质</string>
    <string name="taste">口感</string>
    <string name="sweet">甜感</string>
    <string name="balance">均衡度</string>
    <string name="overall">整体感受</string>
    <string name="underdev">发展不充分</string>
    <string name="overdev">过度发展</string>
    <string name="baked">烤焙味</string>
    <string name="scorched">自焙烫伤</string>
    <string name="tipped">胚芽烫伤</string>
    <string name="faced">豆表烫伤</string>
    <string name="max_score">评分最高</string>
    <string name="min_score">评分最低</string>
    <string name="early_cupping">最早的杯测</string>
    <string name="later_cupping">最新的杯测</string>

    <string name="request_permission_rationale">您好，欢迎使用CoffeeSecret，我们需要以下的权限才能更好的为您服务...</string>
</resources>
