<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:src="@mipmap/ic_launcher" />


    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="9dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_widthPercent="50%">

            <TextView
                android:id="@+id/list_bean_produceArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="7"
                android:text="@string/produce_area"
                android:textColor="@color/list_text_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/list_bean_manor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="7"
                android:text="@string/manor"
                android:textColor="@color/list_text_color"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/weight"
            android:textColor="@color/list_text_color"
            android:textSize="21sp"
            app:layout_widthPercent="50%" />
    </com.zhy.android.percent.support.PercentLinearLayout>
</LinearLayout>